--- a/style.css
+++ b/style.css
@@ -1,22 +1,127 @@
 *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
     font-family: 'Montserrat', sans-serif;
-    background-color: #bfbfbf;
 }
 
-h1 {
-    
-    color:blue;
-}
-
-.prof
+body
 {
-    display: block;
-    width: 150px;
-        
-    border-radius: 1000px;
-    margin-top: 30px;
-    margin-right: 30px;
-    margin-left: 30px;
+    background-color: darkgrey;
+}
+
+.icon
+{
+    color: white;
+    text-align: center;
+    font-size: 25px;
+
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 20px;
+    
+}
+
+.bok
+{
     float: left;
-    box-shadow: 0 0 4px 1px #808080;
+    background-color: #5c5c5c;
+    width: 300px;
+    min-height: 880px;
+    padding: 10px;
+    margin-top: 25px;
+    margin-left: 25px;
+    margin-bottom: 20px;
+    
+}
+
+.main
+{
+    float: left;
+    background-color: #cacaca;
+    width: 750px;
+    min-height: 880px;
+    padding: 10px;
+    margin-top: 25px;
+    margin-left: 15px;
+    margin-bottom: 20px;
+}
+
+.name
+{
+    font-family: 'Marcellus SC', sans-serif;
+    color: #383838;
+    background-color: #cacaca;
+    font-size: 60px;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+.head
+{
+    font-family: 'Marcellus SC', sans-serif;
+    color: #ffffff;
+    margin-bottom: 20px;
+    margin-top: 50px;
+    font-size: 15px;
+    font-size: 25px;
+    font-weight: 600;
+    letter-spacing: 2px;
+    text-align: center;
+    background-color: #5c5c5c;
+    
+
+}
+
+.description
+{
+    color: #383838;
+    background-color: #cacaca;
+    font-size: 20px;
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-right: 20px;
+    position: relative;
+}
+
+.description:before
+{
+    content: "";
+    position: absolute;
+    top: 160px;
+    right: 0;
+    width: 700px;
+    height: 1px;
+    background: dimgrey;
+}
+
+.profile
+{
+    
+    width: 200px;
+    border-radius: 1000px;
+    
+    margin-bottom: 40px;
+    margin-right: 30px;
+    margin-left: 35px;
+    
+    float: left;
+    box-shadow: 0 0 4px 1px #ffffff;
+}
+
+.text1
+{
+    
+    margin-top: 5px;
+    color: #ffffff;
+    font-style:italic;
+    font-size: 20px;
+}
+
+.bok .li_wrap
+{
+    margin-bottom: 15px;
+    display: flex;
+    text-align: center;
 }
