--- a/style.css
+++ b/style.css
@@ -23,12 +23,25 @@ body
     
 }
 
+.icon2
+{
+    color: rgb(0, 0, 0);
+    
+    font-size: 15px;
+
+    margin-left: 20px;
+    margin-top: 4px;
+    
+    width: 20px;
+    
+}
+
 .bok
 {
     float: left;
     background-color: #5c5c5c;
     width: 300px;
-    min-height: 880px;
+    min-height: 1200px;
     padding: 10px;
     margin-top: 25px;
     margin-left: 25px;
@@ -40,8 +53,8 @@ body
 {
     float: left;
     background-color: #cacaca;
-    width: 750px;
-    min-height: 880px;
+    width: 900px;
+    min-height: 1200px;
     padding: 10px;
     margin-top: 25px;
     margin-left: 15px;
@@ -51,7 +64,7 @@ body
 .name
 {
     font-family: 'Marcellus SC', sans-serif;
-    color: #383838;
+    color: #000000;
     background-color: #cacaca;
     font-size: 60px;
     margin-left: 20px;
@@ -69,18 +82,28 @@ body
     font-weight: 600;
     letter-spacing: 2px;
     text-align: center;
-    background-color: #5c5c5c;
+    
     
 
 }
 
 .description
 {
-    color: #383838;
+    
     background-color: #cacaca;
     font-size: 20px;
-    margin-left: 20px;
     margin-top: 20px;
+    position: relative;
+    margin-left: 20px;
+}
+
+.desc
+{
+    color: #000000;
+    
+    font-size: 20px;
+    margin-left: 5px;
+    
     margin-right: 20px;
     position: relative;
 }
@@ -89,10 +112,11 @@ body
 {
     content: "";
     position: absolute;
-    top: 160px;
+    top: 150px;
     right: 0;
-    width: 700px;
+    width: 880px;
     height: 1px;
+    
     background: dimgrey;
 }
 
@@ -103,8 +127,8 @@ body
     border-radius: 1000px;
     
     margin-bottom: 40px;
-    margin-right: 30px;
-    margin-left: 35px;
+    margin-right: 25px;
+    margin-left: 40px;
     
     float: left;
     box-shadow: 0 0 4px 1px #ffffff;
@@ -119,9 +143,46 @@ body
     font-size: 20px;
 }
 
-.bok .li_wrap
+.li_wrap
 {
     margin-bottom: 15px;
     display: flex;
     text-align: center;
+}
+
+.head2
+{
+    font-family: 'Marcellus SC', sans-serif;
+    color: #000000;
+    margin-bottom: 20px;
+    margin-top: 80px;
+    font-size: 25px;
+    font-weight: 1000;
+    letter-spacing: 2px;
+    text-align: center;
+    
+    
+
+}
+.text2
+{
+    font-size: 21px;
+    margin-top: 20px;
+    margin-right: 20px;
+    position: relative;
+    font-weight: bold;
+}
+
+.date
+{
+    letter-spacing: 5px;
+    font-weight: bold;
+    color: lightslategrey;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.school
+{
+    margin-left: 20px;
 }
