--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@
 {
     letter-spacing: 5px;
     font-weight: bold;
-    color: lightslategrey;
+    color: rgb(124, 139, 154);
     margin-top: 5px;
     margin-bottom: 10px;
 }
