--- a/google/styleresults.css
+++ b/google/styleresults.css
@@ -178,3 +178,80 @@
     max-width: 550px;
     line-height: 23px;
 }
+
+.podobne {
+    font-size: 19px;
+    margin-bottom: 20px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.stopka {
+    display: none;
+}
+
+.szare {
+    margin-top: 8px;
+    background: rgb(248, 248, 248);
+    display: flex;
+    
+    box-shadow: none;
+    border-radius: 24px;
+    z-index: 3;
+    height: 46px;
+    margin-left: 220px;
+    
+    width: auto;
+    max-width: 320px;
+    flex: 1;
+    display: flex;
+
+}
+
+.szare1 {
+    margin-top: 8px;
+    background: rgb(248, 248, 248);
+    display: flex;
+    
+    box-shadow: none;
+    border-radius: 24px;
+    z-index: 3;
+    height: 46px;
+    margin-left: 20px;
+    
+    max-width: 320px;
+    flex: 1;
+    display: flex;
+
+}
+
+.szukaj_icon2{
+    
+    display: flex;
+    align-items: center;
+    size: 4px;
+    width: 22px;
+    height: 22px;
+    margin-left: 30px;
+    position: relative;
+    bottom: -12px;
+    left: -10px;
+}
+
+.wiersz {
+    
+    display: flex;
+}
+
+.podobne_wynik {
+    text-decoration: none;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    font-size: 17px;
+    width: auto;
+    color: black;
+    margin-left: 20px;
+    position: relative;
+    bottom: -1px;
+    left: -10px;
+}
