--- a/egzamin/styl3.css
+++ b/egzamin/styl3.css
@@ -13,27 +13,49 @@ body{
     float: left;
 }
 
-#baner-prawy, #blok-prawy{
-    background-color: rgb(130, 69, 85);
+#gora{
+    
+    background-color: rgb(120, 0, 46);
     color: white;
-    width: 70%;
-    height: 200px;
+    width: 100%;
+    height: 150px;
     text-align: center;
+    font-size: 150%;
+    float:initial;
+}
+
+#baner-prawy, #blok-prawy{
+    background-color: rgb(173, 20, 87);
+    color: white;
+    width: 100%;
+    height: 200px;
+    text-align: left;
     float: left;
 }
 
-main, footer{
-    background-color: rgb(240, 234, 226);
+main{
+    background-color: rgb(255, 255, 255);
     padding: 120px;
     clear: both;
 }
+footer{
+    background-color: rgb(120, 0, 46);
+    padding: 50px;
+    clear: both;
+    color: white;
+    text-align: center;
+
+}
 
 table, td{
-    border: 1px solid rgb(130, 69, 85);
-    color: rgb(130, 69, 85);
+    border: 1px solid olivedrab;
+    color: olivedrab;
     padding: 10px;
+    height: 12px;
+    width: 30%;
+    text-align: center;
 }
 
 a{
-    color: rgb(240, 234, 226);
+    color:yellow;
 }
