--- a/style.css
+++ b/style.css
@@ -6,13 +6,16 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-
+body{
+    width: 210mm;
+    height: 297mm;
+}
 
 .icon
 {
     color: white;
     text-align: center;
-    font-size: 25px;
+    font-size: 20px;
 
     margin-left: 20px;
     margin-right: 20px;
@@ -37,8 +40,9 @@
 {
     float: left;
     background: linear-gradient(to right, rgb(47, 38, 225), #0066ff);
-    width: 300px;
-    min-height: 1200px;
+    width: 30%;
+    height: 100%;
+
     padding: 10px;
     margin-top: 25px;
     margin-left: 25px;
@@ -50,12 +54,13 @@
 {
     float: left;
     background-color: #cacaca;
-    width: 900px;
-    min-height: 1200px;
+    width: 60%;
     padding: 10px;
     margin-top: 25px;
     
     margin-bottom: 20px;
+    height: 100%;
+
 }
 
 .name
@@ -74,8 +79,7 @@
     color: #ffffff;
     margin-bottom: 20px;
     margin-top: 50px;
-    font-size: 15px;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 600;
     letter-spacing: 2px;
     text-align: center;
@@ -98,7 +102,7 @@
 {
     color: #000000;
     
-    font-size: 20px;
+    font-size: 15px;
     margin-left: 5px;
     
     margin-right: 20px;
@@ -111,7 +115,7 @@
     position: absolute;
     top: 150px;
     right: 0;
-    width: 880px;
+    width: 100%;
     height: 1px;
     
     background: dimgrey;
@@ -125,7 +129,7 @@
     
     margin-bottom: 40px;
     margin-right: 25px;
-    margin-left: 40px;
+    margin-left: 5%;
     
     float: left;
     box-shadow: 0 0 4px 3px #ffffff;
@@ -143,7 +147,7 @@
     margin-top: 5px;
     color: #ffffff;
     font-style:italic;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 .li_wrap
